Swagger comments for the tags added to all API endpoints
